k8s/manifests/metering/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metering-api
  namespace: metering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metering-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: metering-api
    spec:
      containers:
        - name: metering-api
          image: robotwizard/metering-api:v0.8.0@sha256:61993c1c53efa1c0d92142fbfb099b673051b7000fe562e7244b70d699a44a89
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
