k8s/manifests/metering/dashboard-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metering-dashboard
  namespace: metering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metering-dashboard
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: metering-dashboard
    spec:
      containers:
        - name: metering-dashboard
          image: robotwizard/metering-dashboard:0.2.0@sha256:6ce901d953b7815142952abb4e2ac6fb7acc242a8e0185963434a364e838e852
          ports:
            - containerPort: 80
