k8s/manifests/metering/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metering-api
  namespace: metering
spec:
  selector:
    app: metering-api
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: metering-dashboard
  namespace: metering
spec:
  selector:
    app: metering-dashboard
  ports:
    - port: 80
      targetPort: 80
