k8s/manifests/metering/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metering-api
  namespace: metering
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metering-api.greedo.net`)
      kind: Rule
      services:
        - name: metering-api
          port: 8080
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metering-dashboard
  namespace: metering
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metering.greedo.net`)
      kind: Rule
      services:
        - name: metering-dashboard
          port: 80
  tls: {}
